welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:8: error: not found: value dessineFleur
  dessineFleur()
  ^FlowerPot:35: error: not found: value dessineFleur
  dessineFleur()
  ^FlowerPot:40: error: not found: value setCouleurBrosses
  setCouleurBrosses(Color.cyan)
  ^FlowerPot:41: error: not found: value dessineFleur
  dessineFleur()
  ^FlowerPot:51: error: not found: value dessineFleur
  dessineFleur()
  ^FlowerPot:56: error: not found: value setCouleurBrosses
  setCouleurBrosses(Color.green)
  ^FlowerPot:57: error: not found: value dessineFleur
  dessineFleur()
  ^